--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_react_native
-description: A new Flutter plugin project.
+description: Bridging to call React Native Function from flutter to develop Micro FrontEnd.
 version: 0.0.1
 repository: https://github.com/NoobCode-Alfa/flutter_react_native
 
